fixed grid layout (gap + row heights) , Bugs in passing props

--- a/src/index.css
+++ b/src/index.css
@@ -94,9 +94,27 @@ div.showcase {
   align-self: start;
   justify-content: start;
   justify-items: start; */
-  gap: 1.5rem;
+  column-gap: 1.5rem;
+  row-gap: 0;
   grid-template-columns: auto 35% 35%;
+  grid-template-rows: 34% 32% 34%;
 }
+
+div.project-card:nth-child(5) {
+  translate: 0 200px;
+}
+
+button.arrow-container:nth-child(4) {
+ /* background-color: red; */
+ align-self: start;
+ justify-self: start;
+}
+
+button.arrow-container:nth-child(4) svg {
+  rotate: -45deg;
+}
+
+
 
 @keyframes blink {
   0% {
